# nautobot-circuit-diagram-plugin

./: README.md  pyproject.toml  tasks.py
.github/: CODEOWNERS
development/: dev.env  docker-compose.yml  nautobot_config.py
nautobot_circuit_diagram_plugin/: __init__.py  choices.py  conftest.py  models.py  navigation.py  tests.py  urls.py  views.py
nautobot_circuit_diagram_plugin/templates/nautobot_circuit_diagram_plugin/: organization_map.html
