[tool.poetry]
name = "nautobot-circuit-diagram-plugin"
version = "0.1.0"
description = "data visualization for nautobot circuits"
authors = ["Hanlin Miao"]

[tool.poetry.dependencies]
python = "^3.7"
importlib-metadata = {version = "~4.4", python = "<3.10"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''